--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+
+    <!-- Header: Intro -->
+    <header id="intro">
+        <div class="intro-content">
+            <h1 class="l-heading">
+                The Sky Is The Limit
+            </h1>
+            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga repudiandae quisquam ad sunt voluptatum quia!</p>
+            <a href="#ehat" class="btn">Read More</a>
+        </div>
+    </header>
+
 </body>
 </html>
