--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/3c28672a8d.js" crossorigin="anonymous"></script>
+    
     <title>EdgeLedger Financial | Accounting & Investment</title>
 </head>
 
@@ -38,5 +36,124 @@
         </div>
     </header>
 
+    <!-- Section: What we do -->
+    <section id="what" class="bg-light py-1">
+        <div class="container">
+            <h2 class="m-heading text-center">
+                <span class="text-primary">What</span> We Do
+            </h2>
+            <div class="items">
+                <div class="item">
+                    <i class="fas fa-university fa-2x"></i>
+                    <div>
+                        <h3>Investment Banking</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quas?</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="fas fa-book-reader fa-2x"></i>
+                    <div>
+                        <h3>Portfolio Management</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quas?</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="fas fa-pencil-alt fa-2x"></i>
+                    <div>
+                        <h3>Tax & Custodial</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, quas?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section: Who we are -->
+    <section id="who">
+        <div class="who-img"></div>
+        <div class="who-text bg-dark p-2">
+            <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, laborum. At, nostrum. Accusantium at error neque doloribus provident nesciunt rem? Pariatur laboriosam reiciendis cum. Molestiae cumque numquam sequi aut aperiam?</p>
+            <h3>Our Team</h3>
+            <ul class="list">
+                <li>Mark Smith: CEO</li>
+                <li>Shania Johnson: CFO</li>
+                <li>John Amber: Lead Accountant</li>
+                <li>Alicia Jackson: Investment Manager</li>
+                <li>Mark White: Senior Accountant</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Section: Clients -->
+    <section id="clients" class="py-1">
+        <div class="container">
+            <h2 class="m-heading text-center">
+                <span class="text-primary">Our</span> Clients
+            </h2>
+            <div class="items py-1">
+                <div><img src="./img/logos/logo1.png" alt="logo"></div>
+                <div><img src="./img/logos/logo2.png" alt="logo"></div>
+                <div><img src="./img/logos/logo3.png" alt="logo"></div>
+                <div><img src="./img/logos/logo4.png" alt="logo"></div>
+                <div><img src="./img/logos/logo5.png" alt="logo"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section: Contact -->
+    <section id="contact">
+        <div class="contact-form bg-primary p-2">
+            <h2 class="m-heading">Contact Us</h2>
+            <p>Please use the form below to contact us</p>
+            <form>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="Enter Name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Enter Email">
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <input type="text" name="phone" id="phone" placeholder="Enter Phone">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" placeholder="Enter Message"></textarea>
+                </div>
+                <input type="submit" value="Send" class="btn-dark">
+            </form>
+        </div>
+        <div class="map"></div>
+    </section>
+
+    <!-- Footer-->
+    <footer id="main-footer" class="bg-dark text-center py-1">
+        <div class="container">
+            <p>Copyright &copy 2020, EdgeLedger, All Rights reserved</p>
+        </div>
+    </footer>
+
+    <!-- FontAwesome -->
+    <script 
+        src="https://kit.fontawesome.com/3c28672a8d.js" 
+        crossorigin="anonymous">
+    </script>
+    <!-- JQuery -->
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous">
+    </script>
+    <!-- Local script -->
+    <script src="js/main.js"></script>
+    <!-- Google API -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyMp0NohJz1FVHDMw4bhrV8SoKzw9RVjs&callback=initMap"
+    async defer></script>
+
 </body>
 </html>
+
+<!-- AIzaSyAyMp0NohJz1FVHDMw4bhrV8SoKzw9RVjs -->
